--- a/index.html
+++ b/index.html
@@ -381,13 +381,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
 	<div class="rowR">
 		 <div class="col-9 col-m-10 roundLeft black">
-		 <p>This is a rough, partial first draft. There 
-		 are plans for a number of models that aren't 
-		 shown yet, and plans to revise the ones that are. The whole colony is liable to be moved based on improved 
-		 information and designs. Any model is likely to be chucked and replaced with something better. All the things 
-		 in these opening sections are going to be added to, edited, shuffled, and/or replaced as plans move forward. 
-		 Some earlier items that have been replaced will be saved in a future archive section, but that hasn't been 
-		created yet. </p>
+		 <p>This is a rough, partial first draft. A number of new models are awaiting addition to what is 
+		 here. Integrating them requires a bunch of revisions, as while they were in process, i hesitated to 
+		 begin - how it will all work together has only slowly become clear. But it's getting close now. 
+		 Once they have been added and annotated, the missions will be updated. I am going to say all 
+		 the current models and the mission timeline for them will be done by July. 
+		 </p>
+		 <p>A few things to expect by then - 
+		 models of a solar thermal power plant and energy storage unit, a reactor for processing 
+		 ilmenite into water and iron, and very large habitation structures... also plans for a nuclear shuttle, 
+		 beanstalk tethers, and a clearer vision of the business approach. 
+		 </p>
 		 </div>
 	 </div>
 	<br>
