--- a/planning.html
+++ b/planning.html
@@ -129,7 +129,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		 Realtimeboard</a> entries. Input is always welcome.  
 		 What should be added here? What needs improving? What would you like to work on? What do you think?</span><br><br>
 		 <i>Note May 14 2016 - This page has stalled a little as i try to figure out how best to use it. A lot of 
-		 what it was meant to do has now been taken over by the GitHub and RealTimeBoard pages mentioned above. I have 
+		 what it was meant to do has now been taken over by the GitHub and RealTimeBoard pages mentioned above. 
+		 I think it should host the incomplete plans, to document how they come together over time, and a lot of 
+		 shamelessly niggling and overly detailed documentation of all the elements - which curiously in some ways 
+		 is easier to do than the carefully edited stuff i put up right now. I have 
 		 in fact built several new models over the last few months, and developed plans together with others. 
 		 You can see most of them at my <a href="https://sketchfab.com/briligg">Sketchfab account</a>, though many 
 		 have yet to be configured and annotated. I am about to leave for the<a href="http://isdc.nss.org/2016/#/">
