--- a/browsergame/tutorial.html
+++ b/browsergame/tutorial.html
@@ -1,4 +1,4 @@
-<!DOCTYPE htm>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -8,19 +8,26 @@
 <body bgcolor="#000000" style="color: #FF9900;">
 <center>
 <h1>Tutorial</h1>
-<p>Not much help to get here yet</p>
 <p>Omg! It is a text based game!<br>
 Yep! The developer knows more math than design.<br>
-You actually have to type <i>commands</i> to do stuff...</br>
+You actually have to type <i>commands</i> to do stuff...<br>
 Basic gameplay consist of researching new technologies and buy hardware.<br>
 Once you have a sufficient amount of equipment on the Moon, you can start doing stuff with it.<br><br>
-A good place to start is researching some technology. Type "rd" in the Squacky.<br>
-(Squacky is the propper name of the command line.)<br>
+A good place to start is researching some technology. Type "rd" in the command line<br>
 Other important places are "launch", "shop" and TBD.
 </p>
 <p>This is your goal:</p>
-<img src="images/moon.gif">
-<p><a href="shell.html">Back to page</a></p>
+<img src="images/moon.gif" onmouseover="this.style.transform='rotateZ(12deg)'" onmouseout="this.style.transform='rotateZ(0deg)'">
+<h2>Details</h2>
+<h4>Budget</h4>
+<p>You have a budget of money to spend. Each 100 unit of time, it is replenished.<br>
+Be careful about how much money you spend. You can go below zero, but then a 1% fine is added every 5 time unit.<br>
+Your budget is shown in red below the current time.</p>
+<h4>Time</h4>
+<p>The current time is shown in grey. You can fast forward with the buttons below it.</p>
+<h4>In short</h4>
+<p>Buy parts, stick them together, and launch into space.<br>Then navigate towards the Moon, land and build a base.<br>That is not more complicated than in real life.</p>
+<p><a href="shell.html">Back to the game</a></p>
 <p>The text on this page is centre-aligned, because that is a cool layout.<br>
 Do not tell my anything about CSS!
 </p>
