patching some stuff after the big update
Former-commit-id: 0183d5188120de91d035a3b795e825c4ac2907ed

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -41,6 +41,32 @@ color: blue;
   <p>If you are trying to play this game without JavaScript, you are having a bad problem and will not go to space today.</p>
   <p>However, consider allowing scripts here, the scripts are for nothing but the game, no trackers or anything. There is localStorage however, but that is for creating a savefile. The game works just as fine if you turn off this feature. Type "nosave" in the command line to turn off localStorage usage.</p>
 </noscript>
+        <script>
+        /*    
+        @licstart  The following is the entire license notice for the 
+        JavaScript code in this page.
+
+        Copyright (C) 2016 Sigvart Brendberg
+
+        The JavaScript code in this page is free software: you can
+        redistribute it and/or modify it under the terms of the GNU
+        General Public License (GNU GPL) as published by the Free Software
+        Foundation, either version 3 of the License, or (at your option)
+        any later version.  The code is distributed WITHOUT ANY WARRANTY;
+        without even the implied warranty of MERCHANTABILITY or FITNESS
+        FOR A PARTICULAR PURPOSE.  See the GNU GPL for more details.
+
+        As additional permission under GNU GPL version 3 section 7, you
+        may distribute non-source (e.g., minimized or compacted) forms of
+        that code without the copy of the GNU GPL normally required by
+        section 4, provided you include this license notice and a URL
+        through which recipients can access the Corresponding Source.   
+
+
+        @licend  The above is the entire license notice
+        for the JavaScript code in this page.
+        */
+        </script>
 <p>If you are reading this paragraph, you have a development version of the game. Do not expect anything to work</p>
 <p style="float: right" id="note"></p>
 <p id="timing" style="color: #b09985">0</p>
@@ -57,6 +83,7 @@ color: blue;
   <a href="tutorial.html">Need a quick tutorial?</a>
 </p>
 <img src="images/hoh.gif" onclick="(tolk('about'))" onmouseover="this.style.transform='rotateZ(12deg)'" onmouseout="this.style.transform='rotateZ(0deg)'">
+<p>All javaScript used on this page is free software, licensed under the GPL</p>
 </body>
 <!--The following scripts are for handling basic events-->
 <script type="text/javascript" src="core.js"></script>
