partly removed the command line
Former-commit-id: 74c53676234caae320be54c035d859a397ae9bea

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -72,8 +72,8 @@ color: blue;
 <p id="timing" style="color: #b09985">0</p>
 <p><a id="toggle1" class="fastforward" onclick="this.style.background='red';acceleration(1)"><b>></b></a> <a id="toggle2" class="fastforward" onclick="this.style.background='red';acceleration(5)"><b>>></b></a> <a id="toggle3" class="fastforward" onclick="this.style.background='red';acceleration(25)"><b>>>></b></a></p>
 <p id="budget">Budget: <a style="color: #e02200">1000</a></p>
-<p>Start typing commands! (The command line is mostly redundant now, but is kept for debugging)</p>
-<input type="text" value="" id="command">
+<a id="toggelino" onclick="toggleCommand()" class="blue" onmouseover="this.style.background='#202040';" onmouseout="this.style.background='black';">Show command line</a>
+<a id="hidden"></a>
 <p id="c0"></p><p id="c1"></p><p id="c2"></p><p id="c3"></p><p id="c4"></p><p id="c5"></p><p id="c6"></p><p id="c7"></p><p id="c8"></p><p id="c9"></p><p id="c10"></p><p id="c11"></p><p id="c12"></p><p id="c13"></p><p id="c14"></p><p id="c15"></p><p id="c16"></p><p id="c17"></p><p id="c18"></p><p id="c19"></p>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="science();tolk('rd');command='rd'">R&amp;D</div>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div>
