added cosmonaut section
Former-commit-id: 2471b2508b5c69383c0c9e825735318b9ffce72d

--- a/browsergame/shell.html
+++ b/browsergame/shell.html
@@ -79,6 +79,7 @@ color: blue;
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('launch');command='launch'">Launch</div>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="updateShop();tolk('shop');command='shop'">Shop</div>
 <div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('location');command='location'">Locations</div>
+<div class="navbar" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';" onclick="tolk('cosmo');command='cosmo'">Cosmonauts</div>
 <p>
   <a href="tutorial.html">Need a quick tutorial?</a>
 </p>
