add sketchfab models
Former-commit-id: f4419c21380702045a218d7ae1990e5d59df7572 [formerly 06d2f92dc5f9542e43252f10ebf6c72217f33eb0]
Former-commit-id: 0fbbf6b854fbbfe7d6dcf258b67694ad90000f25

--- a/index.html
+++ b/index.html
@@ -389,13 +389,12 @@ rel='stylesheet' type='text/css'>
 	 <div class="rowR">	
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
-					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Virtual Lunar Colony</a>
-    by <a href="https://sketchfab.com/briligg?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">briligg</a>
-    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-</p>
-				</div>
-			</div>
+					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>			</div>
+<br>
+<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><br>
+<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
+</div>		<br>
+</div>
  
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
