--- a/index.html
+++ b/index.html
@@ -372,16 +372,14 @@ rel='stylesheet' type='text/css'>
 	</div>
 	<div class="rowR">
 		 <div class="col-9 col-m-10 roundLeft black">
-		 <p>This is a rough, partial first draft. A number of new models are awaiting addition to what is 
-		 here. Integrating them requires a bunch of revisions, as while they were in process, i hesitated to 
-		 begin - how it will all work together has only slowly become clear. But it's getting close now. 
-		 Once they have been added and annotated, the missions will be updated. I am going to say all 
-		 the current models and the mission timeline for them will be done by July. 
-		 </p>
+		 <p>This is a rough, partial first draft. At the moment, things are being added quickly and at times 
+it is all rather disorganized. If you return on another day it will be better - or at least disorganized and incomplete in 
+a different place. All the current models and the mission timelines for them are currently slated to be deeply revised by July.
+	 </p>
 		 <p>A few things to expect by then - 
 		 models of a solar thermal power plant and energy storage unit, a reactor for processing 
 		 ilmenite into water and iron, and very large habitation structures... also plans for a nuclear shuttle, 
-		 beanstalk tethers, and a clearer vision of the business approach. 
+		 beanstalk tethers, rovers, and a clearer vision of the business approach. 
 		 </p>
 		 </div>
 	 </div>
