--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@ a different place. All the current models and the mission timelines for them are
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>			</div>
-<br>
-<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><br>
+<br class="clearboth">
+<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><br class="clearboth">
 <div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
-</div>		<br>
+</div>		<br class="clearboth">
 </div>
  
 			<div class="col-11 col-m-11 darkYellow">
