--- a/learn.html
+++ b/learn.html
@@ -41,7 +41,6 @@ rel='stylesheet' type='text/css'>
 <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     </head>
     <body>
-<!-- 'End Google Tag Manager -->
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
             Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -96,6 +95,7 @@ rel='stylesheet' type='text/css'>
             more intuitive with graphics, combining them, and so on.</p>
    </div>
    </div>
+<br class="clearboth">
 	<div class="rowR">
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
