--- a/index.html
+++ b/index.html
@@ -386,14 +386,33 @@ a different place. All the current models and the mission timelines for them are
 	<br>
 	 <div class="rowR">	
 			<div class="col-11 col-m-11 darkYellow">
+					<p class="black roundAll">
+						The Sketchfab 3d models below can be navigated using the buttons that appears in their bottom right corner when they load, after clicking the 'play' arrow. 
+						Take the tour through the them with the Annotations buttons. On tablets and phones, that is the best plan. On large devices, you can also move around in them freely 
+						by zooming with the mouse wheel, left-clicking and dragging to rotate, and right-clicking and dragging to slide. In all cases, consider clicking the button on the 
+						far right to show the model full-screen. These models are large so moving in them is kind of awkward. (I've made a feature request to Sketchfab that would help.)
+					</p>
 				<div class="darkYellow pix">
-					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>			</div>
-<br class="clearboth">
-<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><br class="clearboth">
-<div class="darkYellow pix"><iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
-</div>		<br class="clearboth">
-</div>
- 
+					<p class="black roundAll">This is a representation of the first space for human habitation. 
+					</p>
+					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
+	
+				</div>
+				<br class="clearboth">
+				<div class="darkYellow pix">
+					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
+					frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+				<br class="clearboth">
+				<div class="darkYellow pix">
+					<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" 
+					frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
+				</div>		
+				<br class="clearboth">
+				</div>
+	</div>
+	<br>
+	<div class="rowR">
 			<div class="col-11 col-m-11 darkYellow">
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibA1300.jpg" alt="overview of first structures">
