--- a/index.html
+++ b/index.html
@@ -382,6 +382,33 @@ a different place. All the current models and the mission timelines for them are
 		 beanstalk tethers, rovers, and a clearer vision of the business approach. 
 		 </p>
 		 </div>
+		 <div class="col-9 col-m-10 roundLeft black">
+		 	<p>
+		 		As you go through the material below, keep in mind that the plan follows a 
+		 		few simple principles:
+		 		<ul>
+		 			<li>
+		 				<b>Build Big</b> - It takes less material and work to build one 
+		 				large space than several smaller spaces. The real estate is free 
+		 				(or at least has no price), and large spaces help with several issues 
+		 				on the Moon, such as temperature regulation and creation of 
+		 				a viable self-contained ecosystem.
+		 			</li>
+		 			<li>
+		 				<b>Build Beautiful</b> - This is not the time to cheap out. If people 
+		 				are to be healthy and happy living in an enclosed space almost all the 
+		 				time, on an alien world, that place must be beautiful. Give them 
+		 				plenty of natural light, sweeping views, massive stone walls and floors, 
+		 				lush gardens, water features such as fountains and pools. Yes, this 
+		 				can be done. In fact, it is what will fund the colony through the 
+		 				early years. Besides, it isn't that expensive if you do it right.
+		 			</li>
+		 			<li>
+		 				<b>Build For All Time</b> - 
+		 			</li>
+		 		</ul>
+		 	</p>
+		 </div>
 	 </div>
 	<br>
 	 <div class="rowR">	
@@ -392,8 +419,11 @@ a different place. All the current models and the mission timelines for them are
 						by zooming with the mouse wheel, left-clicking and dragging to rotate, and right-clicking and dragging to slide. In all cases, consider clicking the button on the 
 						far right to show the model full-screen. These models are large so moving in them is kind of awkward. (I've made a feature request to Sketchfab that would help.)
 					</p>
+					<br class="clearboth">
 				<div class="darkYellow pix">
-					<p class="black roundAll">This is a representation of the first space for human habitation. 
+					<p class="black roundAll">This is a representation of the first space for human habitation. It is small 
+					compared to what comes next, but big enough to fit the central principle of 'Go Big, Fast'. Many things 
+					are made easier with lots of elbow room - temperature regulation (which is difficult in space), 
 					</p>
 					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 	
