--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ a different place. All the current models and the mission timelines for them are
 		 	<p>
 		 		As you go through the material below, keep in mind that the plan follows a 
 		 		few simple principles:
-		 		<ul>
+		 		<ul class="dark">
 		 			<li>
 		 				<b>Build Big</b> - It takes less material and work to build one 
 		 				large space than several smaller spaces. The real estate is free 
@@ -404,7 +404,18 @@ a different place. All the current models and the mission timelines for them are
 		 				early years. Besides, it isn't that expensive if you do it right.
 		 			</li>
 		 			<li>
-		 				<b>Build For All Time</b> - 
+		 				<b>Build For All Time</b> - People should be able to live safely in 
+		 				these constructions their whole lives, from the outset. Now, there 
+		 				are a lot of things about how the Moon affects human health that are 
+		 				unknown - we will talk about those challenges. Radiation levels can 
+		 				be handled from the outset, though, and big spaces aid greatly with the 
+		 				other health issues - they create a wealth of exercise options, 
+		 				for instance. Also, these spaces are infrastructure that lives 
+		 				depend on. They should be built to withstand events that almost never 
+		 				happen, such as meteorite strikes or large moonquakes.
+		 			</li>
+		 			<li>
+		 				<b>Sell Residency, Culture, and Space Construction</b>
 		 			</li>
 		 		</ul>
 		 	</p>
