--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@ a different place. All the current models and the mission timelines for them are
 		 beanstalk tethers, rovers, and a clearer vision of the business approach. 
 		 </p>
 		 </div>
+		 <br>
 		 <div class="col-9 col-m-10 roundLeft black">
 		 	<p>
 		 		As you go through the material below, keep in mind that the plan follows a 
@@ -415,7 +416,16 @@ a different place. All the current models and the mission timelines for them are
 		 				happen, such as meteorite strikes or large moonquakes.
 		 			</li>
 		 			<li>
-		 				<b>Sell Residency, Culture, and Space Construction</b>
+		 				<b>Sell Residency, Culture, and Space Construction</b> to work well this 
+		 				needs to be done with care, but it can certainly provide enough income 
+		 				to sustain the colony. Residency is first only available to people selected 
+		 				and sponsored by their country, so that it is based on merit, not wealth, 
+		 				and serves as a unifying force for the world that could be powerful. 
+		 				Broadcasting of sport, dance, exploration, and even daily life can be 
+		 				popular, especially with a hand-picked population. Master fabrication with 
+		 				basalt and use the Moon's vastly easier launch requirements to send 
+		 				prefab components to Earth orbit, building most of a space station with 
+		 				lunar materials.
 		 			</li>
 		 		</ul>
 		 	</p>
