--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ a different place. All the current models and the mission timelines for them are
 		 beanstalk tethers, rovers, and a clearer vision of the business approach. 
 		 </p>
 		 </div>
-		 <br>
+		 <br class="clearboth">
 		 <div class="col-9 col-m-10 roundLeft black">
 		 	<p>
 		 		As you go through the material below, keep in mind that the plan follows a 
