--- a/index.html
+++ b/index.html
@@ -438,11 +438,13 @@ a different place. All the current models and the mission timelines for them are
 						The Sketchfab 3d models below can be navigated using the buttons that appears in their bottom right corner when they load, after clicking the 'play' arrow. 
 						Take the tour through the them with the Annotations buttons. Click on Viewer Mode - the eye button - and select First Person 
 						so you can look around by click-dragging a mouse or sliding your finger across a touchscreen. On tablets and phones, 
-						that is the best plan - looking around could be very laggy though. On large devices, you can also move around in them freely 
-						by zooming with the mouse wheel, left-clicking and dragging to rotate, and right-clicking and dragging to slide. In all cases, consider clicking the button on the 
-						far right to show the model full-screen. These models are large so moving in them is kind of awkward. 
-						(I've made a feature request to Sketchfab that would help.) First Person works better here, too, but you have to put the 
+						that is the best plan - looking around could be very laggy though. On large devices, in Orbit mode you can also move around in them freely 
+						by zooming with the mouse wheel, left-clicking and dragging to rotate, and right-clicking and dragging to slide. First-Person 
+						makes it a lot easier to move where you want but you have to put the 
 						walking speed down to 1 or 2 with the mouse wheel, and use the arrows on the keyboard to walk.
+						These models are large so moving in them is kind of awkward. 
+						(I've made a feature request to Sketchfab that would help.) In all cases, consider clicking the button on the 
+						far right to show the model full-screen. 
 					</p>
 					<br class="clearboth">
 				<div class="darkYellow pix">
