--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ a different place. All the current models and the mission timelines for them are
 						(I've made a feature request to Sketchfab that would help.) In all cases, consider clicking the button on the 
 						far right to show the model full-screen. 
 					</p>
-					<br class="clearboth">
+					<br class="clearboth"><br>
 				<div class="darkYellow pix">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 	
@@ -456,7 +456,7 @@ a different place. All the current models and the mission timelines for them are
 					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
 					frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
-				<br class="clearboth">
+				<br class="clearboth"><br>
 				<div class="darkYellow pix">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" 
 					frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
