added a small canvas to the elevator calculator
Former-commit-id: e09864b9dafecd5d3886696749d914791b66b9af

--- a/learn.html
+++ b/learn.html
@@ -160,7 +160,8 @@ rel='stylesheet' type='text/css'>
                         <input type="text" placeholder="(kg)" value="" id="payloadmass">
                         <p>Safety factor:</p>
                         <input type="text" value="1.1" id="safety"><br><br>
-                        <button onclick="tether()">Calculate!</button>
+                        <button onclick="tether()">Calculate!</button><br>
+			<canvas id="tetherCanvas" width="400" height="100"></canvas>
                         <script src="js/tether.js"></script>
                         <p id="resultLE">&nbsp;</p>
                         <p id="resultLE2">&nbsp;</p>
