html for delta-v comparission
Former-commit-id: 4be472c7f2c9f2d704449523e5c220def330614d

--- a/learn.html
+++ b/learn.html
@@ -111,6 +111,8 @@ rel='stylesheet' type='text/css'>
                         <button onclick="rocket()">Calculate!</button><br>
                         <script src="js/rocketEquation.js"></script>
                         <p style="padding:0;" id="resultRE">&nbsp;</p>
+                        <p style="padding:0;" id="moreThan"></p>
+                        <p style="padding:0;" id="lessThan"></p>
                     </div>
                 </div>
                 <div class="black roundAll">
