--- a/learn.html
+++ b/learn.html
@@ -202,6 +202,7 @@ rel='stylesheet' type='text/css'>
 			<p>Every way of changing the velocity of a spacecraft is based upon the conservation of momentum. That is, if you take every object in a system, multiply their mass and velocity, and take their sum, the value you get is constant. That means throwing propellant in one direction causes something else in to move in the opposite direction in order to keep the momentum constant. That "something" is your spacecraft.</p>
 			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation:
 <a href="">(remember to place link here)</a>
+Testing MathJax. $$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
 Work in progress, To be continued. (How does the CSS layout work here? I can not figure it out.)
 			</p>
 		    </div>
