--- a/learn.html
+++ b/learn.html
@@ -196,14 +196,19 @@ rel='stylesheet' type='text/css'>
                     <div class="darkYellow pad15 roundAll">
 			<h3>A quick introduction to orbital mechanics</h3><br>
 			<h5>The basics:</h5>
-			<p>Navigation a spacecraft can best be understood as moving a heavy bowling ball. When it is up to speed, it continues to move, without anything pushing it. What requires effort is to change the direction it is moving, give it more speed, or slow it down. Coasting along is "free". The cost of a maneouver is the required <b>change in velocity</b>, commonly refered to as <b>Delta-v</b>.</p>
+			<p>Navigation a spacecraft can best be understood as moving a heavy bowling ball. When it is up to speed, it continues to move, without anything pushing it. What requires effort is to change the direction it is moving, give it more speed, or slow it down. Coasting along is "free". The cost of a maneouver is the required <b>change in velocity</b>, commonly referred to as <b>Delta-v</b>.</p>
 			<p>An orbit is an example of coasting along for free. When in an orbit, a spacecraft does not use its thrusters, and gravity bends its path, most often to an ellipse. Thus, you can leave your spacecraft in an orbit for as long as you like.</p>
-			<p>However, when we want to change our spacecraft's orbit, we have to change our velocity, thus draining from our Delta-v budget. A spacecraft always has a limited amount of Delta-v, so making transfers between orbits as cheap as possible is a major considerationin spacecraft navigation.</p>
+			<p>However, when we want to change our spacecraft's orbit, we have to change our velocity, thus draining from our Delta-v budget. A spacecraft always has a limited amount of Delta-v, so making transfers between orbits as cheap as possible is a major considerations in  spacecraft navigation.</p>
 			<p>Every way of changing the velocity of a spacecraft is based upon the conservation of momentum. That is, if you take every object in a system, multiply their mass and velocity, and take their sum, the value you get is constant. That means throwing propellant in one direction causes something else in to move in the opposite direction in order to keep the momentum constant. That "something" is your spacecraft.</p>
-			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation:
-<a href="">(remember to place link here)</a>
-Testing MathJax. $$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
-Work in progress, To be continued. (How does the CSS layout work here? I can not figure it out.)
+			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation, used to calculate Delta-v:
+$$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
+This is the Tsiolkovsky rocket equation. Tsiolkovsky figured out how rockets worked <i>before</i> planes where invented. Let us see how it works:<br>
+$v_e$ is the exhaust velocity<br>
+$m_{initial}$ is the mass of the entire spacecraft before you start the burn<br>
+$m_{final}$ is the mass of the spacecraft after the burn. $\frac{m_{initial}}{m_{final}}$ is often called the mass parameter.<br>
+$ln$ is the natural logarithm. You should have a button labelled that on your calculator.<br>
+A calculator implementation of this equation is at the top of this page.
+(How does the CSS layout work here? I can not figure it out.)
 			</p>
 		    </div>
 		</div>
