--- a/learn.html
+++ b/learn.html
@@ -204,7 +204,7 @@ rel='stylesheet' type='text/css'>
 $$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
 This is the Tsiolkovsky rocket equation. Tsiolkovsky figured out how rockets worked <i>before</i> planes where invented. Let us see how it works:<br>
 $$v_e$$ is the exhaust velocity<br>
-$m_{initial}$$ is the mass of the entire spacecraft before you start the burn<br>
+$$m_{initial}$$ is the mass of the entire spacecraft before you start the burn<br>
 $$m_{final}$$ is the mass of the spacecraft after the burn. $$\frac{m_{initial}}{m_{final}}$$ is often called the mass parameter.<br>
 $$ln$$ is the natural logarithm. You should have a button labelled that on your calculator.<br>
 A calculator implementation of this equation is at the top of this page.
