--- a/learn.html
+++ b/learn.html
@@ -38,6 +38,15 @@ rel='stylesheet' type='text/css'>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+<script type="text/x-mathjax-config">
+  //this is a script for making the single $ inline delimeter work. Stolen from here: http://tex.stackexchange.com/a/27656
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      processEscapes: true
+    }
+  });
+</script>
 <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     </head>
     <body>
@@ -203,10 +212,10 @@ rel='stylesheet' type='text/css'>
 			<p>The obvious limitation should then be clear: We have a limited amount of propellant to trow away. Making the propellant go faster makes the required amount smaller, so that helps. This is the <b>exhaust velocity of the rocket</b>. Another measure for the exact same thing is <b>Isp</b> (specific impulse). That is just the exhaust velocity divided by the standard gravity at sea level (9.81 m/s²). Here is our first important equation, used to calculate Delta-v:
 $$\Delta v=v_e \cdot ln\left(\frac{m_{initial}}{m_{final}}\right)$$
 This is the Tsiolkovsky rocket equation. Tsiolkovsky figured out how rockets worked <i>before</i> planes where invented. Let us see how it works:<br>
-$$v_e$$ is the exhaust velocity<br>
-$$m_{initial}$$ is the mass of the entire spacecraft before you start the burn<br>
-$$m_{final}$$ is the mass of the spacecraft after the burn. $$\frac{m_{initial}}{m_{final}}$$ is often called the mass parameter.<br>
-$$ln$$ is the natural logarithm. You should have a button labelled that on your calculator.<br>
+$v_e$ is the exhaust velocity<br>
+$m_{initial}$ is the mass of the entire spacecraft before you start the burn<br>
+$m_{final}$ is the mass of the spacecraft after the burn. $\frac{m_{initial}}{m_{final}}$ is often called the mass parameter.<br>
+$ln$ is the natural logarithm. You should have a button labelled that on your calculator.<br>
 A calculator implementation of this equation is at the top of this page.
 (How does the CSS layout work here? I can not figure it out.)
 			</p>
