--- a/learn.html
+++ b/learn.html
@@ -216,7 +216,16 @@ $v_e$ is the exhaust velocity<br>
 $m_{initial}$ is the mass of the entire spacecraft before you start the burn<br>
 $m_{final}$ is the mass of the spacecraft after the burn. $\frac{m_{initial}}{m_{final}}$ is often called the mass parameter.<br>
 $ln$ is the natural logarithm. You should have a button labelled that on your calculator.<br>
-A calculator implementation of this equation is at the top of this page.
+A calculator implementation of this equation is at the top of this page.<br></p>
+			<h5>Propulsion:</h5>
+			<p>As it is desirable to have as high a exhaust velocity as possible, the goal of all kinds of rocket propulsion is to cram as much propellant into the propellant stream as physically possible</p>
+			<h6>Chemical rockets</h6>
+			<p>This is the most common way of rocket propulsion, and gets the energy from chemical reactions of fuel. The exhaust products also doubles as the reaction mass. The most common rocket fuels are kerosene like hydrocarbons and liquid oxygen. For higher performance, but at the cost of a more coplicated design, hydrogen can be used instead of kerosene. There are also many other fuels mostly focusing on easy to store and failproof engines. Solid rocket fuel is often used for boosters and does not offer a high performance, but has decent thrust.
+			</p>
+			<h6>Nuclear rockets</h6>
+			<p>The amount of energy that can be stored as chemical compounds is limited, and chemical rockets are also forced to use less than optimal exhaust products as reaction mass. In general, ligther molecules are better, but no chemical reaction that produces large amount energy also produce hydrogen gas. Nuclear engines bypass this issue by using a reactor to heat the flow of propellant, making use of hydrogen gas possible, this makes the exhaust velocity twice as large as chemical rockets. On the other hand, they often has lower thrust.
+			</p>
+			<p>
 (How does the CSS layout work here? I can not figure it out.)
 			</p>
 		    </div>
