--- a/learn.html
+++ b/learn.html
@@ -225,6 +225,10 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<h6>Nuclear rockets</h6>
 			<p>The amount of energy that can be stored as chemical compounds is limited, and chemical rockets are also forced to use less than optimal exhaust products as reaction mass. In general, ligther molecules are better, but no chemical reaction that produces large amount energy also produce hydrogen gas. Nuclear engines bypass this issue by using a reactor to heat the flow of propellant, making use of hydrogen gas possible, this makes the exhaust velocity twice as large as chemical rockets. On the other hand, they often has lower thrust.
 			</p>
+			<h6>Ion engines</h6>
+			<p>TODO</p>
+			<h6>Solar sails</h6>
+			<h6>TODO</h6>
 			<p>
 (How does the CSS layout work here? I can not figure it out.)
 			</p>
