--- a/learn.html
+++ b/learn.html
@@ -185,22 +185,9 @@ rel='stylesheet' type='text/css'>
     by <a href="https://sketchfab.com/briligg?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">briligg</a>
     on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
 </p>
+<a href="rotovator.html">Link to animated rotovator</a>
 
                 </div>
-        <!--not completed
-                <div class="black roundAll">
-                	<div class="darkYellow pad15 roundAll">
-                		<h4 class="yellow">Lunar Rotovator</h4><br>
-                		<div>
-                			<img src="blank.png" height="512">
-					<img id="moon" src="moon.png" height="128" style="position: absolute; top: 198px; left: 198px;">
-					<img id="tether" src="tether.png" style="position: absolute; top: 185px; left: 256px; transform: rotate(0deg);">
-					<img id="payload" src="payload.png" style="position: absolute; top: 316px; left: 256px;">
-                		</div>
-                		<script src="js/animationRotovator.js"></script>
-                	</div>
-                </div>
-         -->
                 <div class="black roundAll">
                     <div class="darkYellow pad15 roundAll">
 			<h3>A quick introduction to orbital mechanics</h3><br>
@@ -242,8 +229,6 @@ A calculator implementation of this equation is at the top of this page.<br></p>
     </div>
 </div>
 <script>
-
-
 </script>
     </body>
 </html>
