--- a/rotovator.html
+++ b/rotovator.html
@@ -4,13 +4,17 @@
 <meta charset="utf-8">
 </head>
 <body>
-                		<h4 class="yellow">Lunar Rotovator</h4><br>
-                		<div>
-                			<img src="img/blank.png" height="512">
-					<img id="moon" src="img/moon.png" height="128" style="position: absolute; top: 198px; left: 198px;">
-					<img id="tether" src="img/tether.png" style="position: absolute; top: 185px; left: 256px; transform: rotate(0deg);">
-					<img id="payload" src="img/payload.png" style="position: absolute; top: 316px; left: 256px;">
-                		</div>
-                		<script src="js/animationRotovator.js"></script>
+<h4 class="yellow">Lunar Rotovator</h4><br>
+        <div>
+                <img src="img/blank.png" height="512">
+		<img id="moon" src="img/moon.png" height="128" style="position: absolute; top: 198px; left: 198px;">
+		<img id="tether" src="img/tether.png" style="position: absolute; top: 185px; left: 256px; transform: rotate(0deg);">
+		<img id="payload" src="img/payload.png" style="position: absolute; top: 316px; left: 256px;">
+        </div>
+<a href="learn.html">Back to learn</a><br>
+<p>A simple HTML animation of a rotating tether in Moon orbit. This is CC-BY, so feel free to download it and use it yourself.<br>
+You would need the four image files /img/moon.png, /img/blank.png, /img/tether.png, /img/payload.png, this HTML page and the script /js/animationRotovator.js
+</p>
+<script src="js/animationRotovator.js"></script>
 </body>
 </html>
