--- a/learn.html
+++ b/learn.html
@@ -215,7 +215,9 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<h6>Ion engines</h6>
 			<p>TODO</p>
 			<h6>Solar sails</h6>
-			<h6>TODO</h6>
+			<p6>TODO</p>
+			<h5>Orbit terminology:</h5>
+			<img src="img/orbit.png">
 			<p>
 (How does the CSS layout work here? I can not figure it out.)
 			</p>
